updated menue item

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             <li class="li-items">
                                 <a href="#ContactsSec" class="a-items heading-SB">Contacts</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="refund.html">Refund Portal</a>
+                            <li class="li-items">
+                                <a class="a-items heading-SB" href="refund.html">Refund Portal</a>
                             </li>
                             </ul>
                         </div>
