--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="nav-otr">
                     <div class="nav-bar">
                         <div class="logo">
-                            <a href="#" class="nav-logo">
+                            <a href="index.html" class="nav-logo">
                             <img style="width: 60px; height: 100px;" class="logo-img" src="assets/img/aza-ventures-logo.png" alt="logo">
                             </a>
                         </div>
@@ -77,8 +77,8 @@
                             <li class="li-items">
                                 <a href="#ContactsSec" class="a-items heading-SB">Contacts</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="refund.html">Refund Portal</a>
+                            <li class="li-items">
+                                <a class="a-items heading-SB" href="refund.html">Refund Portal</a>
                             </li>
                             </ul>
                         </div>
