table page added

--- a/refund.html
+++ b/refund.html
@@ -163,6 +163,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="refund.html">Refund Portal</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="table.html">Refund Table</a>
+                    </li>
                 </ul>
             </div>
         </div>
