changed background on table.html

--- a/refund.html
+++ b/refund.html
@@ -143,7 +143,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -161,7 +161,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="refund.html">Refund Portal</a>
+                        <a class="nav-link active" href="refund.html">Refund Portal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="table.html">Refund Table</a>
