--- a/table.html
+++ b/table.html
@@ -1,178 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AZA Ventures - Refund Status</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AZA Ventures - Refund Status</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #fff;
-    }
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #fff;
+        }
 
-    /* Hero gradient background like refund.html */
-    .hero-section {
-      background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
-      color: white;
-      padding: 100px 0;
-      position: relative;
-      overflow: hidden;
-      min-height: 100vh;
-    }
+        .hero-section {
+            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+            color: white;
+            padding: 100px 0;
+            position: relative;
+            overflow: hidden;
+            min-height: 100vh;
+        }
 
-    .hero-section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-    }
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
 
-    .hero-content {
-      position: relative;
-      z-index: 2;
-    }
+        .hero-content {
+            position: relative;
+            z-index: 2;
+        }
 
-    /* Table styling */
-    .table-container {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      padding: 30px;
-      margin-top: 30px;
-      color: #333;
-    }
+        .table-container {
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            padding: 30px;
+            margin-top: 30px;
+            color: #333;
+        }
 
-    .cta-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
-    }
+        .cta-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
 
-    .btn-custom {
-      padding: 12px 30px;
-      border-radius: 50px;
-      font-weight: 600;
-      min-width: 200px;
-      color: #fff;
-    }
+        .btn-custom {
+            padding: 12px 30px;
+            border-radius: 50px;
+            font-weight: 600;
+            min-width: 200px;
+            color: #fff;
+        }
 
-    .btn-claim {
-      background: #dc3545;
-      border: none;
-    }
+        .btn-claim {
+            background: #dc3545;
+            border: none;
+        }
 
-    .btn-agreement {
-      background: #28a745;
-      border: none;
-    }
-  </style>
+        .btn-claim:hover {
+            background: #c82333;
+            color: white;
+        }
+
+        .btn-accept {
+            background: #28a745;
+            border: none;
+        }
+
+        .btn-accept:hover {
+            background: #218838;
+            color: white;
+        }
+
+        .btn-agreement {
+            background: #28a745;
+            border: none;
+        }
+    </style>
 </head>
+
 <body>
 
-  <section class="hero-section">
-    <div class="container hero-content text-center">
-      <h1 class="display-4 fw-bold mb-4">Your Refund Status</h1>
-      <p class="lead mb-5">Check the latest update on your refund</p>
+    <section class="hero-section">
+        <div class="container hero-content text-center">
+            <h1 class="display-4 fw-bold mb-4">Your Refund Status</h1>
 
-      <!-- Table -->
-      <div class="table-container">
-        <div class="table-responsive">
-          <table id="refundTable" class="table table-striped">
-            <thead class="table-dark">
-              <tr>
-                <th>Email ID</th>
-                <th>Telegram ID</th>
-                <th>Wallet</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+            <!-- Table -->
+            <div class="table-container">
+                <div class="table-responsive">
+                    <table id="refundTable" class="table table-striped">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Wallet</th>
+                                <th>OTC Name</th>
+                                <th>USDT Allocation before Fees</th>
+                                <th>USDT Allocation After fees</th>
+                                <th>% Distribution of OTC</th>
+                                <th>Capital Recouped</th>
+                                <th>Deal Level profit after fees</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!--  data rows will be injected here -->
+                        </tbody>
 
-        <!-- Buttons -->
-        <div class="cta-buttons">
-          <button class="btn btn-custom btn-claim">Raise a Claim</button>
-          <button class="btn btn-custom btn-agreement">Agreement</button>
+                    </table>
+
+                </div>
+                <!-- Totals Summary -->
+                <div id="totalsSummary" class="mt-4 p-3 bg-light rounded shadow-sm text-dark d-none">
+                    <h5 class="fw-bold mb-3">Total Profit After Fees:</h5>
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <div class="p-3 border rounded bg-white">
+                                <div id="totalAfter" class="fs-5 text-success"><strong></strong>0.00</strong></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="profitMessage" class="alert alert-success mt-3 d-none fw-bold text-center"></div>
+
+
+                <!-- Buttons -->
+                <div class="cta-buttons">
+                    <button class="btn btn-custom btn-claim" id="objBtn">Claims & Objections</button>
+                    <button class="btn btn-custom btn-accept" id="acceptBtn">Accept Refund</button>
+                </div>
+            </div>
         </div>
-      </div>
+    </section>
+
+    <!-- Issue Modal -->
+    <div class="modal fade" id="issueModal" tabindex="-1" aria-labelledby="issueModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-warning">
+                    <h5 class="modal-title fw-bold" id="issueModalLabel">Report an Issue</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-dark">
+                    <div class="mb-3">
+                        <p> Only claims and objections for <b>missing allocation</b> and
+                            <b>secondary OTC deal calculations will be entertained </b>.<br><br>
+                            Objections raised on Calculation of PnL will be <b>ignored</b>,
+                            as it is final and as per the date of the distribution.
+                        </p>
+                        <label for="issueText" class="form-label">Are you facing any issues?</label>
+                        <textarea class="form-control" id="issueText" rows="4"
+                            placeholder="Describe your issue here..."></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="submitIssueBtn">Submit</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </section>
 
-  <script>
-    // Configuration
-    const USER_EMAIL = "fkhan.codes@gmail.com";
-    const CSV_FILE = "Investor Details.csv";
-    
-    // Fallback data
-    const FALLBACK_CSV = `Email ID,Telegram ID,Wallet
-fkhan.codes@gmail.com,@testuser,0x123...`;
 
-    async function loadCSVData() {
-      try {
-        const response = await fetch(CSV_FILE, { cache: 'no-store' });
-        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-        return await response.text();
-      } catch {
-        return FALLBACK_CSV;
-      }
-    }
 
-    function parseCSV(csvText) {
-      const lines = csvText.replace(/\r/g, '').split('\n').filter(line => line.trim() !== '');
-      const headers = lines[0].split(',').map(h => h.trim());
-      const results = [];
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
 
-      for (let i = 1; i < lines.length; i++) {
-        const currentLine = lines[i].split(',');
-        const obj = {};
-        for (let j = 0; j < headers.length; j++) {
-          obj[headers[j]] = currentLine[j] ? currentLine[j].trim() : '';
-        }
-        results.push(obj);
-      }
-      return results;
-    }
-
-    function populateTable(data) {
-      const tbody = document.querySelector('#refundTable tbody');
-      tbody.innerHTML = '';
-
-      const userRecord = data.find(row => 
-        row["Email ID"] && row["Email ID"].toLowerCase() === USER_EMAIL.toLowerCase()
-      );
-
-      if (userRecord) {
-        const tr = document.createElement('tr');
-        ['Email ID', 'Telegram ID', 'Wallet'].forEach(key => {
-          const td = document.createElement('td');
-          td.textContent = userRecord[key] || 'N/A';
-          tr.appendChild(td);
+        // Show the issue modal when "Claims & Objections" is clicked
+        document.getElementById("objBtn").addEventListener("click", function (e) {
+            e.preventDefault();
+            const issueModal = new bootstrap.Modal(document.getElementById('issueModal'));
+            issueModal.show();
         });
-        tbody.appendChild(tr);
-      } else {
-        tbody.innerHTML = `
-          <tr class="text-danger">
-            <td colspan="3">No record found for ${USER_EMAIL}</td>
-          </tr>
-        `;
-      }
-    }
 
-    document.addEventListener('DOMContentLoaded', async () => {
-      const csvText = await loadCSVData();
-      const parsedData = parseCSV(csvText);
-      populateTable(parsedData);
-    });
-  </script>
+        // Handle submit button in the modal
+        document.getElementById("submitIssueBtn").addEventListener("click", function () {
+            const issueText = document.getElementById("issueText").value.trim();
+            if (!issueText) {
+                alert("Please describe your issue before submitting.");
+                return;
+            }
+            alert("Thank you for your feedback! We have received your issue.");
+            bootstrap.Modal.getInstance(document.getElementById('issueModal')).hide();
+            document.getElementById("issueText").value = "";
+        });
+
+        // Get walletId from URL query parameter
+        function getWalletIdFromUrl() {
+            const params = new URLSearchParams(window.location.search);
+            return (params.get('wallet') || '').toLowerCase();
+        }
+        const WALLET_ID = getWalletIdFromUrl();
+        const CSV_FILE = "Investor Details.csv";
+        const FALLBACK_CSV = `Error,No CSV found`;
+
+        let currentUser = {};
+
+        async function loadCSVData() {
+            try {
+                const response = await fetch(CSV_FILE, { cache: 'no-store' });
+                if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+                const text = await response.text();
+                return text;
+            } catch (err) {
+                return "FALLBACK_CSV";
+            }
+        }
+
+        function parseCSV(csvText) {
+            const lines = csvText.replace(/\r/g, '').split('\n').filter(line => line.trim() !== '');
+            const headers = lines[0].split(',').map(h => h.trim());
+            const results = [];
+
+            for (let i = 1; i < lines.length; i++) {
+                const currentLine = lines[i].split(',');
+                const obj = {};
+                for (let j = 0; j < headers.length; j++) {
+                    obj[headers[j]] = currentLine[j] ? currentLine[j].trim() : '';
+                }
+                results.push(obj);
+            }
+            return results;
+        }
+
+        function populateTable(data) {
+            const tbody = document.querySelector('#refundTable tbody');
+            tbody.innerHTML = '';
+
+            const userRecords = data.filter(row =>
+                row["Wallet"] && row["Wallet"].toLowerCase() === WALLET_ID
+            );
+
+            if (userRecords.length > 0) {
+                currentUser = userRecords[0];
+
+                let totalProfitAfter = 0;
+                userRecords.forEach(record => {
+                    const tr = document.createElement('tr');
+                    [
+                        'Wallet',
+                        'OTC Name',
+                        'USDT Allocation before Fees',
+                        'USDT Allocation After fees',
+                        '% Distribution of OTC',
+                        'Capital Recouped',
+                        'Deal Level profit after fees'
+                    ].forEach(key => {
+                        const td = document.createElement('td');
+                        td.textContent = record[key] || 'N/A';
+                        tr.appendChild(td);
+                    });
+                    tbody.appendChild(tr);
+                    totalProfitAfter += parseFloat(record["Deal Level profit after fees"] || 0);
+                });
+
+                document.getElementById("totalAfter").textContent = totalProfitAfter.toFixed(2);
+                document.getElementById("totalsSummary").classList.remove("d-none");
+
+                const profitMessage = document.getElementById("profitMessage");
+                const acceptBtn = document.getElementById("acceptBtn");
+
+                if (totalProfitAfter > 0) {
+                    profitMessage.textContent = "Congratulations you are already in profits!";
+                    profitMessage.classList.remove("d-none");
+                    acceptBtn.disabled = true;
+                    acceptBtn.classList.add("disabled");
+                } else {
+                    profitMessage.classList.add("d-none");
+                    acceptBtn.disabled = false;
+                    acceptBtn.classList.remove("disabled");
+                }
+            } else {
+                tbody.innerHTML = `
+                    <tr class="text-danger">
+                        <td colspan="11">No record found for wallet ${WALLET_ID}</td>
+                    </tr>
+                `;
+                document.getElementById("totalsSummary").classList.add("d-none");
+            }
+        }
+
+        const acceptBtn = document.getElementById("acceptBtn");
+        if (acceptBtn) {
+            acceptBtn.addEventListener("click", function () {
+                // Forward wallet id as query param
+                window.location.href = `payment-plan.html?wallet=${encodeURIComponent(WALLET_ID)}`;
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            const csvText = await loadCSVData();
+            const parsedData = parseCSV(csvText);
+            populateTable(parsedData);
+        });
+    </script>
 </body>
+
 </html>
